bug-fix: hotspot not showing at clicked position, added Store (Todo: use it in the app)

--- a/picto-app/src/components/css/PanoramaViewer.css
+++ b/picto-app/src/components/css/PanoramaViewer.css
@@ -93,7 +93,6 @@
 }
 
 
-
 /* Hotspots */
 .hotspot-manager__custom_hotspot {
     height: 17.5px;
@@ -101,8 +100,9 @@
     background: #000;
     border-radius: 50%;
     border: 4px solid #F0F0F0;
-    position: relative;
+    position: absolute;
     transition: border-color 0.1s ease;
+    cursor: pointer;
 }
 
 .hotspot-manager__custom_hotspot svg {
@@ -120,6 +120,10 @@
 }
 
 /* Tooltip and content styling */
+.hotspot-manager__custom-tooltip {
+    position: absolute !important;
+}
+
 .hotspot-manager__custom-tooltip .hotspot-manager__content,
 .hotspot-manager__label {
     position: absolute;
